# Deal_viewer

./: .env  .gitignore  README.md  pyproject.toml
front/: index.html
src/deal_viewer1/: deal.json  main.py
src/deal_viewer1/database/: db.py
src/deal_viewer1/models/: models.py  test.json
src/deal_viewer1/routes/: delete_template.py  get_deal.py  health_check_router.py  insert_template.py  template_router.py  update_template.py
src/deal_viewer1/services/: template_service.py
