[project]
name = "deal-viewer1"
version = "0.1.0"
description = ""
authors = [
    {name = "KEVINBOISNE",email = "kevin.boisne@oclock.school"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.41.0,<0.42.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]

[tool.poetry]
packages = [{include = "deal_viewer1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
